--- a/src/lib/global.css
+++ b/src/lib/global.css
@@ -14,3 +14,20 @@ body {
     width: 100%;
     height: 500px;
 }
+
+#map svg {
+	position: absolute;
+	z-index: 1;
+	width: 100%;
+	height: 100%;
+	pointer-events: auto
+}
+
+circle {
+	transform-origin: center;
+	transform-box: fill-box;
+	transition: 200ms;
+	&:hover {
+		transform: scale(1.5);
+	}
+}
