--- a/src/lib/global.css
+++ b/src/lib/global.css
@@ -26,7 +26,7 @@ body {
 #mapSwipe {
     flex: 1;
     width: 100%;
-    height: 500px;
+    height: 600px;
 }
 
 #mapSwipe svg {
@@ -76,6 +76,6 @@ h3 {
 	font-size: 36px;
 }
 
-a {
+#action-links {
 	color: white;
 }
