--- a/src/lib/global.css
+++ b/src/lib/global.css
@@ -27,20 +27,6 @@ body {
 	cursor: pointer
 }
 
-#mapSwipe {
-    flex: 1;
-    width: 100%;
-    height: 600px;
-}
-
-#mapSwipe svg {
-	position: absolute;
-	z-index: 1;
-	width: 100%;
-	height: 100%;
-	pointer-events: none
-}
-
 circle {
 	pointer-events: auto
 }
@@ -68,24 +54,28 @@ h2 {
 	background-color: #3E2F5B;
 	color: white;
 	padding: 3em;
+	font-size: 24px;
 }
 
 #action {
 	background-color: #E01A4F;
 	color: white;
 	padding: 3em;
+	font-size: 24px;
 }
 
 #references {
 	background-color: steelblue;
 	color: white;
 	padding: 3em;
+	font-size: 20px;
 }
 
 #acks {
 	background-color: #70A288;
 	color: white;
 	padding: 3em;
+	font-size: 24px;
 }
 
 .ref {
@@ -104,6 +94,35 @@ p {
 	font-size: 24px;
 }
 
-li {
-	font-size: 24px;
+#mapBase {
+    flex: 1;
+    width: 100%;
+    height: 600px;
+}
+
+#mapBase svg {
+	position: absolute;
+	z-index: 1;
+	width: 100%;
+	height: 100%;
+	pointer-events: none
+}
+
+#mapSwipe {
+    flex: 1;
+    width: 100%;
+    height: 600px;
+}
+
+#mapSwipe svg {
+	position: absolute;
+	z-index: 1;
+	width: 100%;
+	height: 100%;
+	pointer-events: none
+}
+
+#slider {
+	width: 100%;
+	accent-color: steelblue;
 }
