--- a/src/lib/global.css
+++ b/src/lib/global.css
@@ -647,8 +647,9 @@ img.outline {
 	color: #333333;
 	font-size: 1.25em;
 	line-height: 1.7;
-	max-width: 700px;
+	max-width: 800px;
 	margin: 0 auto 1.5em;
+	text-align: left;
 }
 
 /* match the narrative headings’ font family, but keep your chart-title styling */
